--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "@aspnet/signalr": "^1.0.27",
     "chart.js": "^3.7.1",
+    "ng2-charts": "^3.0.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
